headline copy update

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 		
 			<!-- Title --> 
 		
-			<h3>Real-time CLV by Individual, Cohort, and Overall</h3>
+			<h3>Identify Your Most Valuable Customers</h3>
 			
 			<!-- Content --> 
 			
