updated index copy

--- a/index.html
+++ b/index.html
@@ -95,80 +95,11 @@
 		
 			<!-- Title --> 
 		
-			<h3>CLV as a Service</h3>
-			
-			<!-- Content --> 
-			
-			<p>Customer Lifetime Value (CLV) is the most important marketing metric you are not effectively tracking.  You won't know how much to spend on acquiring or retaining a customer if you do not know what that customer is worth to your business.<p>
-		
-		</div>
-	
-		<!-- Image from right --> 
-	
-		<div class="five columns cbp-so-side-img cbp-so-side-right">
-		
-			<img src="img/counting-money.jpg" alt="CLV as a Service">
-		
-		</div>
-
-	</div>
-
-</section>
-
-<!-- END FIRST SECTION ############################################### -->
-
-
-
-<!-- SECOND SECTION ############################################### -->
-
-<section class="cbp-so-section" >
-
-	<div class="row">
-	
-	
-		<div class="seven columns cbp-so-side cbp-so-side-right" style="float:right;">
-		
-			<!-- Title --> 
-		
-			<h3>Traditional Methods are Flawed</h3>
-			
-			<!-- Content --> 
-			
-			<p>Conventional methods of calculating CLV consider a limited time horizon and treat every customer as an <em>average</em> customer, blurring key metric drivers. On top of that, most CLV forecasting is based on regression analysis, which is notorously poor at predicting the future.  Our customer equity platform uses fully probabilistic models at an individual customer level, and our methods come from the latest research on modern CLV calculation.</p>
-			
-		</div>		
-		
-		<!-- Image from left --> 
-		
-		<div class="five columns cbp-so-side-img cbp-so-side-left" >
-			
-			<img src="img/regression-fail.png" alt="Traditional Methods are Flawed">
-						
-		</div>	
-		
-		
-	</div>
-
-</section>
-
-<!-- END SECOND SECTION ############################################### -->
-
-
-<!-- THIRD SECTION ############################################### -->
-
-<section class="cbp-so-section">
-
-	<div class="row">
-		
-		<div class="seven columns cbp-so-side cbp-so-side-left">
-		
-			<!-- Title --> 
-		
 			<h3>Identify Your Most Valuable Customers</h3>
 			
 			<!-- Content --> 
 			
-			<p>There is a science to it.  Our advanced cloud platform continually updates CLV calculations for each individual and each customer cohort in real-time at a scale that was not possible even a few years ago. Our live dashboard displays changes to the value of your customer equity as it happens.</p>
+			<p>There is a science to it.  Our advanced cloud platform continually updates customer lifetime value calculations for each individual and each customer cohort in real-time at a scale that was not possible even a few years ago. Our live dashboard displays changes to the value of your customer equity as it happens.</p>
 		
 		</div>
 	
@@ -182,12 +113,15 @@
 
 	</div>
 
+	
+
 </section>
 
-<!-- END THIRD SECTION ############################################### -->
+<!-- END FIRST SECTION ############################################### -->
 
 
-<!-- FOURTH SECTION ############################################### -->
+
+<!-- SECOND SECTION ############################################### -->
 
 <section class="cbp-so-section" >
 
@@ -216,6 +150,78 @@
 		
 		
 	</div>
+
+	
+
+</section>
+
+<!-- END SECOND SECTION ############################################### -->
+
+
+<!-- THIRD SECTION ############################################### -->
+
+<section class="cbp-so-section">
+
+	<div class="row">
+		
+		<div class="seven columns cbp-so-side cbp-so-side-left">
+		
+			<!-- Title --> 
+		
+			<h3>CLV as a Service</h3>
+			
+			<!-- Content --> 
+			
+			<p>Customer Lifetime Value (CLV or LTV) is the most important marketing metric you are not effectively tracking.  You won't know how much to spend on acquiring or retaining a customer if you do not know what that customer is worth to your business.<p>
+		
+		</div>
+	
+		<!-- Image from right --> 
+	
+		<div class="five columns cbp-so-side-img cbp-so-side-right">
+		
+			<img src="img/counting-money.jpg" alt="CLV as a Service">
+		
+		</div>
+
+	</div>
+
+</section>
+
+<!-- END THIRD SECTION ############################################### -->
+
+
+<!-- FOURTH SECTION ############################################### -->
+
+<section class="cbp-so-section" >
+
+	<div class="row">
+	
+	
+		<div class="seven columns cbp-so-side cbp-so-side-right" style="float:right;">
+		
+			<!-- Title --> 
+		
+			<h3>Traditional Methods are Flawed</h3>
+			
+			<!-- Content --> 
+			
+			<p>Conventional methods of calculating CLV consider a limited time horizon and treat every customer as an <em>average</em> customer, blurring key metric drivers. On top of that, most CLV forecasting is based on regression analysis, which is notorously poor at predicting the future.  Our customer equity platform uses fully probabilistic models at an individual customer level, and our methods come from the latest research on modern CLV calculation.</p>
+			
+		</div>		
+		
+		<!-- Image from left --> 
+		
+		<div class="five columns cbp-so-side-img cbp-so-side-left" >
+			
+			<img src="img/regression-fail.png" alt="Traditional Methods are Flawed">
+						
+		</div>	
+		
+		
+	</div>
+		
+	
 
 </section>
 
